--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -13,6 +13,18 @@
         <item>500</item>
     </integer-array>
 
+    <integer-array name="array_of_duration_value_integers">
+        <item>1</item>
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>20</item>
+        <item>30</item>
+        <item>45</item>
+        <item>60</item>
+        <item>90</item>
+        <item>120</item>
 
+    </integer-array>
 
 </resources>
