--- a/res/menu/contact_detail_menu.xml
+++ b/res/menu/contact_detail_menu.xml
@@ -17,6 +17,30 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_imageButton_call"
+        android:title="@string/menu_new_call"
+        android:icon="@drawable/ic_action_call"
+        android:showAsAction="always"/>
+
+    <item
+        android:id="@+id/menu_imageButton_chat"
+        android:title="@string/menu_new_sms"
+        android:icon="@drawable/ic_action_chat"
+        android:showAsAction="always"/>
+
+    <item
+        android:id="@+id/menu_imageButton_email"
+        android:title="@string/menu_new_email"
+        android:icon="@drawable/ic_action_email"
+        android:showAsAction="always"/>
+
+    <item
+        android:id="@+id/menu_imageButton_new_event"
+        android:title="@string/menu_new_event"
+        android:icon="@drawable/ic_action_new_event"
+        android:showAsAction="ifRoom"/>
+
+    <item
             android:id="@+id/menu_edit_contact"
             android:title="@string/menu_edit_contact"
             android:icon="@drawable/ic_action_edit"
